Converted Forecasts to Kendo Grid

--- a/src/Example01/DC.Example01/DC.Example01.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/src/Example01/DC.Example01/DC.Example01.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -4,21 +4,4 @@
 
 <p *ngIf="!forecasts"><em>Loading...</em></p>
 
-<table class='table' *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.dateFormatted }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>
+<kendo-grid [data]="forecasts"></kendo-grid>
