Adding header detail to fetch data kendo grid

--- a/src/Example01/DC.Example01/DC.Example01.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
+++ b/src/Example01/DC.Example01/DC.Example01.Web/ClientApp/app/components/fetchdata/fetchdata.component.html
@@ -4,4 +4,9 @@
 
 <p *ngIf="!forecasts"><em>Loading...</em></p>
 
-<kendo-grid [data]="forecasts"></kendo-grid>
+<kendo-grid [data]="forecasts">
+    <kendo-grid-column field="dateFormatted" title="Date"></kendo-grid-column>
+    <kendo-grid-column field="temperatureC" title="Temp. (C)" width="150"></kendo-grid-column>
+    <kendo-grid-column field="temperatureF" title="Temp. (F)" width="150">
+    </kendo-grid-column> <kendo-grid-column field="summary" title="Summary"></kendo-grid-column>
+</kendo-grid>
